--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PureWear - Boutique Officielle</title>
   <style>
-    body {
+    body {<img src="photo1.jpg" alt="Ma photo" width="300">
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
