--- a/index.html
+++ b/index.html
@@ -7,18 +7,22 @@
     <!-- Bootstrap CSS pour un design professionnel -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        body { font-family: Arial, sans-serif; }
-        .product-card { margin-bottom: 20px; }
+        body { font-family: Arial, sans-serif; background-color: #f8f9fa; }
+        .navbar { background-color: #343a40; }
+        .navbar-brand, .nav-link { color: white !important; }
+        .navbar-brand:hover, .nav-link:hover { color: #ddd !important; }
+        .product-card { margin-bottom: 20px; background: white; border-radius: 10px; padding: 15px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
         .product-card img { max-height: 300px; object-fit: contain; }
         .cart-item { margin-bottom: 10px; }
-        .section { display: none; }
+        .section { display: none; padding: 20px; }
         .section.active { display: block; }
+        .checkout-form { max-width: 500px; margin: 0 auto; }
     </style>
 </head>
 <body>
 
 <!-- Navigation Bar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
         <a class="navbar-brand" href="#" onclick="showSection('home')">Purewear</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,75 +42,75 @@
 <div class="container mt-5">
     <!-- Accueil -->
     <div id="home" class="section active">
-        <h1>Bienvenue sur Purewear</h1>
-        <p>Votre boutique en ligne professionnelle pour des vêtements et accessoires de qualité, spécialisés dans les montres de luxe.</p>
-        <button class="btn btn-primary" onclick="showSection('products')">Voir les produits</button>
+        <h1 class="text-center">Bienvenue sur Purewear</h1>
+        <p class="text-center">Découvrez notre collection exclusive de montres de luxe pour hommes, alliant style et qualité.</p>
+        <div class="text-center"><button class="btn btn-primary" onclick="showSection('products')">Voir les produits</button></div>
     </div>
 
     <!-- Produits -->
     <div id="products" class="section">
-        <h1>Nos Produits</h1>
+        <h1 class="text-center">Nos Produits</h1>
         <div class="row">
             <div class="col-md-4 product-card">
-                <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgDcpFu_-6gwjWLKjyX5cA87ATGmAbJjTUgzhghL76FCLI4gxvdNFbFRyv3xFSWXczL_PgBadHznOpupaHxts04wyNYMpuynGygWBpO3XBdUOqvdNdZUBacetM8cISwmY2kg4z03AvQKprJ_qxeWOJnMOJj5AWu9ga8AzBW-pZZuqSkZylcTIGYa1VibMo/s320/WhatsApp%20Image%202025-10-25%20at%2022.01.02%20(2).jpeg" alt="Montres d'affaires carrées pour hommes" class="img-fluid">
-                <h3>Montres d'affaires carrées pour hommes, montre de luxe à Quartz avec bracelet en acier inoxydable et calendrier pour hommes (sans boîte)</h3>
+                <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgDcpFu_-6gwjWLKjyX5cA87ATGmAbJjTUgzhghL76FCLI4gxvdNFbFRyv3xFSWXczL_PgBadHznOpupaHxts04wyNYMpuynGygWBpO3XBdUOqvdNdZUBacetM8cISwmY2kg4z03AvQKprJ_qxeWOJnMOJj5AWu9ga8AzBW-pZZuqSkZylcTIGYa1VibMo/s320/WhatsApp%20Image%202025-10-25%20at%2022.01.02%20(2).jpeg" alt="Montres d'affaires carrées" class="img-fluid">
+                <h3>Montres d'affaires carrées pour hommes, montre de luxe à Quartz avec bracelet en acier inoxydable et calendrier (sans boîte)</h3>
                 <p>Prix: 29.99 €</p>
-                <button class="btn btn-success" onclick="addToCart('Montres d\'affaires carrées pour hommes, montre de luxe à Quartz avec bracelet en acier inoxydable et calendrier pour hommes (sans boîte)', 29.99)">Ajouter au panier</button>
+                <button class="btn btn-success" onclick="addToCart('Montres d\'affaires carrées', 29.99)">Ajouter au panier</button>
             </div>
             <div class="col-md-4 product-card">
-                <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhpV7eHMe5CYKxBRMYjoy9z-So_35g3Prrd1lZGaJi4AG1eDr9mFnr91DuSQA9QzbqyA20u8ePgxkOFX6zmXZBF8T_jo6SInA0XST8SmpbctLdGA0q_jhIvUrFNgk1nNDwwVXwUqarCe2blIi8rI6E16Ys3s5BQvgO3tyrzcVqB8okz-JdAwvmu0KJSQUc/s320/WhatsApp%20Image%202025-10-25%20at%2022.01.02%20(1).jpeg" alt="UTHAI montre pour hommes à la mode" class="img-fluid">
-                <h3>UTHAI montre pour hommes à la mode haut de gamme lumière luxe polyvalent montres à Quartz étanche romain creux mâle horloge montre</h3>
+                <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhpV7eHMe5CYKxBRMYjoy9z-So_35g3Prrd1lZGaJi4AG1eDr9mFnr91DuSQA9QzbqyA20u8ePgxkOFX6zmXZBF8T_jo6SInA0XST8SmpbctLdGA0q_jhIvUrFNgk1nNDwwVXwUqarCe2blIi8rI6E16Ys3s5BQvgO3tyrzcVqB8okz-JdAwvmu0KJSQUc/s320/WhatsApp%20Image%202025-10-10-25%20at%2022.01.02%20(1).jpeg" alt="UTHAI montre pour hommes" class="img-fluid">
+                <h3>UTHAI montre pour hommes à la mode, lumière luxe, montres à Quartz étanche romain creux</h3>
                 <p>Prix: 27.99 €</p>
-                <button class="btn btn-success" onclick="addToCart('UTHAI montre pour hommes à la mode haut de gamme lumière luxe polyvalent montres à Quartz étanche romain creux mâle horloge montre', 27.99)">Ajouter au panier</button>
+                <button class="btn btn-success" onclick="addToCart('UTHAI montre pour hommes', 27.99)">Ajouter au panier</button>
             </div>
             <div class="col-md-4 product-card">
-                <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiEVyV5XkWQfgrpPXyPcvMX5C19cauXCPloKHh86aRxvQk6vWMidLOifr-BKhhuVRc3e2b4BK6vFiBxH-rd361QAiYXFGT1OGcvSyu9z4xKoju-nFma3-uOWrKEt-YQOny6FhxBeR7g9Uk60By-md66RPTJL4dizGRbO8NGTaNRLETdPiIhB7zUDzRRtbM/s320/WhatsApp%20Image%202025-10-25%20at%2022.01.02.jpeg" alt="5 pièces ensemble DEYROS mode hommes" class="img-fluid">
-                <h3>5 pièces ensemble DEYROS mode hommes calendrier montres hommes d'affaires en acier inoxydable Quartz montre-Bracelet mâle décontracté collier Bracelet montre</h3>
+                <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiEVyV5XkWQfgrpPXyPcvMX5C19cauXCPloKHh86aRxvQk6vWMidLOifr-BKhhuVRc3e2b4BK6vFiBxH-rd361QAiYXFGT1OGcvSyu9z4xKoju-nFma3-uOWrKEt-YQOny6FhxBeR7g9Uk60By-md66RPTJL4dizGRbO8NGTaNRLETdPiIhB7zUDzRRtbM/s320/WhatsApp%20Image%202025-10-25%20at%2022.01.02.jpeg" alt="Ensemble DEYROS mode hommes" class="img-fluid">
+                <h3>5 pièces ensemble DEYROS mode hommes, calendrier, montres en acier inoxydable Quartz</h3>
                 <p>Prix: 25.99 €</p>
-                <button class="btn btn-success" onclick="addToCart('5 pièces ensemble DEYROS mode hommes calendrier montres hommes d\'affaires en acier inoxydable Quartz montre-Bracelet mâle décontracté collier Bracelet montre', 25.99)">Ajouter au panier</button>
+                <button class="btn btn-success" onclick="addToCart('Ensemble DEYROS mode hommes', 25.99)">Ajouter au panier</button>
             </div>
             <div class="col-md-4 product-card">
-                <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgTJ8RB-cZ3ru-XBB4U20qPPDfWlK7H-ysHeOXtWjHVaJSXXVV-2xa6ykdhCVqyoLTM5Hl9ktdvZN-JRb3RWX_2jtTWxvYxaMWGPHVT5lNlfrLZ1MD-M1UoU0BLICOKtkQMGJG8_nMfHmskq6z0WZ4A1uisRiQb7pC_pyQFUZ7mj8uoaf7t9w7w5FPQ/s320/y.jpeg" alt="Montre étanche de luxe pour hommes" class="img-fluid">
+                <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgTJ8RB-cZ3ru-XBB4U20qPPDfWlK7H-ysHeOXtWjHVaJSXXVV-2xa6ykdhCVqyoLTM5Hl9ktdvZN-JRb3RWX_2jtTWxvYxaMWGPHVT5lNlfrLZ1MD-M1UoU0BLICOKtkQMGJG8_nMfHmskq6z0WZ4A1uisRiQb7pC_pyQFUZ7mj8uoaf7t9w7w5FPQ/s320/y.jpeg" alt="Montre étanche de luxe" class="img-fluid">
                 <h3>Montre étanche de luxe pour hommes, Date, calendrier, montre à Quartz, mode Business</h3>
                 <p>Prix: 28.99 €</p>
-                <button class="btn btn-success" onclick="addToCart('Montre étanche de luxe pour hommes, Date, calendrier, montre à Quartz, mode Business', 28.99)">Ajouter au panier</button>
+                <button class="btn btn-success" onclick="addToCart('Montre étanche de luxe', 28.99)">Ajouter au panier</button>
             </div>
             <div class="col-md-4 product-card">
-                <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgfjQaiWB2qr3TRl6h_sjuhMIRzi-V_Qr3DCsw0RvBds5UohlOxzIIzW97mqx4BAF4fhpAbibW3Ge4PVcRcdqGelpStVkUiXffQPhSVYIUsn5acBakQO6cHVQ7xVrm6YUoiOh2azyjSXG3srj1TOk5NL_IYg0SlMuJ-Iujy0LVZ9y_WRmwHR39Jzh51icM/s320" alt="2025 nouvelle montre de sport créative" class="img-fluid">
-                <h3>2025 nouvelle montre de sport créative Simple moderne Design décontracté affaires montres à Quartz étanches cadeau pour hommes Reloj Hombre</h3>
+                <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgfjQaiWB2qr3TRl6h_sjuhMIRzi-V_Qr3DCsw0RvBds5UohlOxzIIzW97mqx4BAF4fhpAbibW3Ge4PVcRcdqGelpStVkUiXffQPhSVYIUsn5acBakQO6cHVQ7xVrm6YUoiOh2azyjSXG3srj1TOk5NL_IYg0SlMuJ-Iujy0LVZ9y_WRmwHR39Jzh51icM/s320" alt="Montre de sport 2025" class="img-fluid">
+                <h3>2025 nouvelle montre de sport créative, Design décontracté, montres à Quartz étanches</h3>
                 <p>Prix: 19.99 €</p>
-                <button class="btn btn-success" onclick="addToCart('2025 nouvelle montre de sport créative Simple moderne Design décontracté affaires montres à Quartz étanches cadeau pour hommes Reloj Hombre', 19.99)">Ajouter au panier</button>
+                <button class="btn btn-success" onclick="addToCart('Montre de sport 2025', 19.99)">Ajouter au panier</button>
             </div>
         </div>
     </div>
 
     <!-- Panier -->
     <div id="cart" class="section">
-        <h1>Votre Panier</h1>
+        <h1 class="text-center">Votre Panier</h1>
         <div id="cart-items"></div>
-        <h3>Total: <span id="total">0</span> €</h3>
-        <button class="btn btn-primary" onclick="showSection('checkout')">Procéder au paiement</button>
+        <h3 class="text-center">Total: <span id="total">0 €</span></h3>
+        <div class="text-center"><button class="btn btn-primary" onclick="showSection('checkout')">Procéder au paiement</button></div>
     </div>
 
     <!-- Paiement -->
     <div id="checkout" class="section">
-        <h1>Finaliser votre commande</h1>
+        <h1 class="text-center">Finaliser votre commande</h1>
         <div id="cart-items-checkout"></div>
-        <h3>Total: <span id="total-checkout">0</span> €</h3>
-        <form>
+        <h3 class="text-center">Total: <span id="total-checkout">0 €</span></h3>
+        <form class="checkout-form mt-4">
             <div class="mb-3">
                 <label for="name" class="form-label">Nom</label>
-                <input type="text" class="form-control" id="name">
+                <input type="text" class="form-control" id="name" required>
             </div>
             <div class="mb-3">
                 <label for="address" class="form-label">Adresse</label>
-                <input type="text" class="form-control" id="address">
+                <input type="text" class="form-control" id="address" required>
             </div>
             <div class="mb-3">
                 <label for="phone" class="form-label">Téléphone</label>
-                <input type="tel" class="form-control" id="phone">
+                <input type="tel" class="form-control" id="phone" required>
             </div>
-            <button type="button" class="btn btn-primary" onclick="submitOrder()">Payer via WhatsApp</button>
+            <button type="button" class="btn btn-primary w-100" onclick="submitOrder()">Payer via WhatsApp</button>
         </form>
     </div>
 </div>
@@ -119,6 +123,9 @@
             section.classList.remove('active');
         });
         document.getElementById(sectionId).classList.add('active');
+        if (sectionId === 'cart' || sectionId === 'checkout') {
+            displayCart();
+        }
     }
 
     // Gestion du panier avec localStorage
@@ -133,6 +140,7 @@
         }
         localStorage.setItem('cart', JSON.stringify(cart));
         alert(`${productName} ajouté au panier !`);
+        displayCart();
     }
 
     function displayCart() {
@@ -152,7 +160,7 @@
         });
         const totalElements = [document.getElementById('total'), document.getElementById('total-checkout')];
         totalElements.forEach(totalElement => {
-            if (totalElement) totalElement.innerText = total;
+            if (totalElement) totalElement.innerText = total + ' €';
         });
     }
 
@@ -184,6 +192,7 @@
 
         // Vider le panier après commande
         localStorage.removeItem('cart');
+        alert('Commande envoyée ! Merci.');
         showSection('home');
     }
 
